# ultimate-life

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  example_script.life  gimmeit.sh
.github/workflows/: test-conan-build-script.yml  test-install-script.yml  unit-tests.yml
docs/: lifescript.gram
include/ultimate_life/: grid.h  life_loop.h  lifeconfig.h  macros.h  range.h  renderer.h  sdl.h  window.h
include/utils/: range.h  range2d.h
src/lifescript/: .gitignore  lifescript.g4
src/ultimate_life/: grid.cpp  life_loop.cpp  lifeconfig.cpp  main.cpp  range.cpp  renderer.cpp  sdl.cpp  window.cpp
src/utils/: range.cpp  range2d.cpp
tests/: test_float_range.cpp  test_int_range.cpp  test_long_range.cpp  test_range.cpp  test_range2d.cpp
